--- a/htmls/home/templates/Index/index.html
+++ b/htmls/home/templates/Index/index.html
@@ -11,13 +11,8 @@
 <body>
 <header >
 </header>
-	<div class="container">
-		
-		
-      
-
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -69,11 +64,40 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div class="container" style="margin-top : 100px">
+
+	<div class="row">
+		<div class="col-md-9">
+			<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">Panel title</h3>
+			  </div>
+			  <div class="panel-body">
+			    Panel content
+			  </div>
+			</div>	
+		</div>
+		<div class="col-md-3">
+			<ul class="list-group">
+			  <li class="list-group-item">Cras justo odio</li>
+			  <li class="list-group-item">Dapibus ac facilisis in</li>
+			  <li class="list-group-item">Morbi leo risus</li>
+			  <li class="list-group-item">Porta ac consectetur ac</li>
+			  <li class="list-group-item">Vestibulum at eros</li>
+			  <li class="list-group-item">Vestibulum at eros</li>
+			  <li class="list-group-item">Vestibulum at eros</li>
+			  <li class="list-group-item">Vestibulum at eros</li>
+			  <li class="list-group-item">Vestibulum at eros</li>
+			  <li class="list-group-item">Vestibulum at eros</li>
+			  <li class="list-group-item">Vestibulum at eros</li>
+			</ul>
+		</div>
+	
+	</div>
 
 </div>
+
 <div>
-
-
 
 </div>
 <script src="<{$__PUBLIC__}>/bootstrap3/bower_components/jquery/dist/jquery.min.js"></script>
