--- a/htmls/admin/templates/Index/login.html
+++ b/htmls/admin/templates/Index/login.html
@@ -50,6 +50,13 @@
 		
 		$.post('<{U_admin m=index a=doLogin}>', fvars, function(json_data){
 			console.log(json_data) ;
+            json_data = $.parseJSON(json_data) ;
+            if(json_data.code == 200){
+                alert('succ') ;
+                window.location.href = '<{U_admin m=index a=index}>' ;
+            }else{
+                alert(json_data.data.msg);
+            }
 		})
 	})
 </script>
