--- a/htmls/admin/templates/Product/list.html
+++ b/htmls/admin/templates/Product/list.html
@@ -34,7 +34,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">商品列表</h1>
+                    <h1 class="page-header">文章列表</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
