--- a/htmls/home/templates/Index/index.html
+++ b/htmls/home/templates/Index/index.html
@@ -7,8 +7,8 @@
 <header >
 </header>
 <{include file="../Public/nav.html"}>
-<div class="container" style="margin-top : 100px">
-
+<div class="container main">
+	
 	<div class="row">
 		<div class="col-md-9">
 			<div class="panel panel-default">
@@ -23,19 +23,7 @@
 			</div>
 		</div>
 		<div class="col-md-3">
-			<ul class="list-group">
-			  <li class="list-group-item">Cras justo odio</li>
-			  <li class="list-group-item">Dapibus ac facilisis in</li>
-			  <li class="list-group-item">Morbi leo risus</li>
-			  <li class="list-group-item">Porta ac consectetur ac</li>
-			  <li class="list-group-item">Vestibulum at eros</li>
-			  <li class="list-group-item">Vestibulum at eros</li>
-			  <li class="list-group-item">Vestibulum at eros</li>
-			  <li class="list-group-item">Vestibulum at eros</li>
-			  <li class="list-group-item">Vestibulum at eros</li>
-			  <li class="list-group-item">Vestibulum at eros</li>
-			  <li class="list-group-item">Vestibulum at eros</li>
-			</ul>
+			<{include file="../Public/hot.html"}>
 		</div>
 
 	</div>
