--- a/htmls/home/templates/Public/nav.html
+++ b/htmls/home/templates/Public/nav.html
@@ -49,6 +49,7 @@
           <ul class="dropdown-menu">
             <li><a href="/games/xxl">连连看</a></li>
             <li><a href="<{U_home m=Games a=getGame p='act=planebattle'}>">打飞机</a></li>
+            <li><a href="<{U_home m=Games a=getGame p='act=catch'}>">抓</a></li>
           </ul>
         </li>
       </ul>
