--- a/htmls/admin/templates/Public/header.html
+++ b/htmls/admin/templates/Public/header.html
@@ -4,7 +4,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>wshop admin system</title>
+<title>article admin system</title>
 
 <!-- Bootstrap Core CSS -->
 <link href="<{$__PUBLIC__}>/bootstrap3/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
