--- a/htmls/admin/templates/Index/index.html
+++ b/htmls/admin/templates/Index/index.html
@@ -12,27 +12,10 @@
     <div id="wrapper">
 
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">wshop</a>
-            </div>
-            <!-- /.navbar-header -->
-
-            <{include file="../Public/icon.html"}>
-            <!-- /.navbar-top-links -->
-
-            <{include file="../Public/menu.html"}>
-            <!-- /.navbar-static-side -->
-        </nav>
+		<{include file="../Public/nav.html"}>
 
         <div id="page-wrapper">
-            主页开发中。。。
+           	 主页开发中。。。
         </div>
         <!-- /#page-wrapper -->
 
