--- a/htmls/admin/templates/Public/menu.html
+++ b/htmls/admin/templates/Public/menu.html
@@ -16,13 +16,25 @@
 				<a href="<{U_admin m="index" a="index" p="uid=<{$uid}>"}>"><i class="fa fa-dashboard fa-fw"></i> 主页</a>
 			</li>
 			<li>
-				<a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> 商品管理<span class="fa arrow"></span></a>
+				<a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> 文章管理<span class="fa arrow"></span></a>
 				<ul class="nav nav-second-level">
 					<li>
 						<a href="<{U_admin m="product" a="glist"}>"> 列表</a>
 					</li>
 					<li>
 						<a href="<{U_admin m="product" a="add"}>"> 新建</a>
+					</li>
+				</ul>
+				<!-- /.nav-second-level -->
+			</li>
+			<li>
+				<a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> 类型管理<span class="fa arrow"></span></a>
+				<ul class="nav nav-second-level">
+					<li>
+						<a href="<{U_admin m="type" a="index"}>"> 列表</a>
+					</li>
+					<li>
+						<a href="<{U_admin m="type" a="add"}>"> 新建</a>
 					</li>
 				</ul>
 				<!-- /.nav-second-level -->
