--- a/htmls/admin/templates/Type/add.html
+++ b/htmls/admin/templates/Type/add.html
@@ -23,7 +23,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">新建文章</h1>
+                    <h1 class="page-header">新建类型</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -32,27 +32,14 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            New Article
+                            New Type
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <form role="form" name="content-form">
                                 <div class="form-group">
                                     <label>Title</label>
-                                    <input class="form-control" name="atitle">
-                                    <p class="help-block">Input article title here.</p>
-                                </div>
-                               	<div class="form-group">
-                                    <label>Selects type</label>
-                                    <select class="form-control" name="type">
-                                    	<{foreach from=$typeList item=typeItem}>
-                                        <option value="<{$typeItem.id}>"><{$typeItem.name}></option>
-                                        <{/foreach}>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>Content</label>
-                                    <script id="editor" type="text/plain" style="height:500px;"></script>
+                                    <input class="form-control" name="name">
                                 </div>
                                 <div class="form-group">
                                     <button type="button" id="submit" class="btn btn-default">Submit Button</button>
@@ -75,30 +62,21 @@
 
 <{include file="../Public/footer.html"}>
 <script type="text/javascript">
-    //实例化编辑器
-    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-    var h_editor = UE.getEditor('editor');
 
     $('#submit').click(function(){
 
         var params = {} ;
-        params.title = $('[name=atitle]').val();
-        params.type = $('[name=type]').val();
-        params.content = UE.getEditor('editor').getContent() ;
+        params.name = $('[name=name]').val();
 
-        $.post('<{U_admin m=product a=doAdd}>', params, function(jdata){
+        $.post('<{U_admin m=type a=doAdd}>', params, function(jdata){
 			jdata = $.parseJSON(jdata) ;
 			if(jdata.code == 200){
-				window.location.reload() ;
+				window.location.href='<{U_admin m=type a=index}>' ;
 			}else{
 				alert(jdata.data.msg) ;
 			}
         })
 
-    })
-
-    $('#reset').click(function(){
-        h_editor.setContent('', false);
     })
 
 </script>
