--- a/htmls/admin/templates/Product/add.html
+++ b/htmls/admin/templates/Product/add.html
@@ -39,14 +39,15 @@
                             <form role="form" name="content-form">
                                 <div class="form-group">
                                     <label>Title</label>
-                                    <input class="form-control" name="atitle">
+                                    <input class="form-control" name="atitle" value="<{$info.title}>">
                                     <p class="help-block">Input article title here.</p>
                                 </div>
                                	<div class="form-group">
                                     <label>Selects type</label>
                                     <select class="form-control" name="type">
+                                    	<option value="0" >请选择</option>
                                     	<{foreach from=$typeList item=typeItem}>
-                                        <option value="<{$typeItem.id}>"><{$typeItem.name}></option>
+                                        <option value="<{$typeItem.id}>" <{if $typeItem.id eq $info.type }> selected <{/if}> ><{$typeItem.name}></option>
                                         <{/foreach}>
                                     </select>
                                 </div>
@@ -59,7 +60,7 @@
                                     <button type="reset" id="reset" class="btn btn-default">Reset Button</button>
                                 </div>
                             </form>
-
+							<div id="_content" style="display:none"><{$info.content}></div>
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -77,7 +78,14 @@
 <script type="text/javascript">
     //实例化编辑器
     //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-    var h_editor = UE.getEditor('editor');
+    //var h_editor = UE.getEditor('editor').execCommand('insertHtml', $('#_content').html()); //.setContent($('#_content').html());
+    //console.log($('#_content').html());
+    //h_editor.setContent($('#_content').html());
+    h_editor = UE.getEditor('editor');
+    
+    $(function(){
+    	UE.getEditor('editor').setContent('a', false);
+    })
 
     $('#submit').click(function(){
 
@@ -99,6 +107,7 @@
 
     $('#reset').click(function(){
         h_editor.setContent('', false);
+        
     })
 
 </script>
