--- a/htmls/admin/templates/Product/add.html
+++ b/htmls/admin/templates/Product/add.html
@@ -40,7 +40,7 @@
                             	<input type="hidden" name="id" value="<{$info.id}>" >
                                 <div class="form-group">
                                     <label>Title</label>
-                                    <input class="form-control" name="atitle" value="<{$info.title}>">
+                                    <input class="form-control" name="atitle" value="<{if null != $info }><{$info.title}><{/if}>">
                                     <p class="help-block">Input article title here.</p>
                                 </div>
                                	<div class="form-group">
@@ -48,7 +48,7 @@
                                     <select class="form-control" name="type">
                                     	<option value="0" >请选择</option>
                                     	<{foreach from=$typeList item=typeItem}>
-                                        <option value="<{$typeItem.id}>" <{if $typeItem.id eq $info.type }> selected <{/if}> ><{$typeItem.name}></option>
+                                        <option value="<{$typeItem.id}>" <{if null != $info and $typeItem.id eq $info.type }> selected <{/if}> ><{$typeItem.name}></option>
                                         <{/foreach}>
                                     </select>
                                 </div>
@@ -61,7 +61,7 @@
                                     <button type="reset" id="reset" class="btn btn-default">Reset Button</button>
                                 </div>
                             </form>
-							<div id="_content" style="display:none"><{$info.content}></div>
+							<div id="_content" style="display:none"><{if null != $info }><{$info.content}><{/if}></div>
                         </div>
                         <!-- /.panel-body -->
                     </div>
