--- a/htmls/home/templates/Public/header.html
+++ b/htmls/home/templates/Public/header.html
@@ -4,3 +4,12 @@
 <title>PHPXIN_BLOG</title>
 <link href="<{$__PUBLIC__}>/bootstrap3/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="<{$__THEME__}>/style/main.css" type="text/css" rel="stylesheet">
+<script type="text/javascript">
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?528733462da51dd9a77b5cab038dbe94";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
