--- a/htmls/home/templates/Public/header.html
+++ b/htmls/home/templates/Public/header.html
@@ -1,7 +1,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>PHPXIN_BLOG</title>
+<title><{$page_title}></title>
+<meta name="keywords" content="<{$page_keywords}>"/>
+<meta name="description" content="<{$page_keywords}>" />
 <link href="<{$__PUBLIC__}>/bootstrap3/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="<{$__THEME__}>/style/main.css" type="text/css" rel="stylesheet">
 <script type="text/javascript">
