--- a/htmls/home/templates/Article/detail.html
+++ b/htmls/home/templates/Article/detail.html
@@ -6,7 +6,7 @@
 <link id="syntaxhighlighter_css" rel="stylesheet" type="text/css" href="/theme/public/editor/third-party/SyntaxHighlighter/shCoreDefault.css" />
 <script id="syntaxhighlighter_js" type="text/javascript" defer="defer" src="/theme/public/editor/third-party/SyntaxHighlighter/shCore.js"></script>
 <style>
-	#preview *{font-family:Courier New ,sans-serif;font-size:12px;}
+	#preview *{font-family:Courier New ,sans-serif;}
 </style>
 </head>
 <body>
