--- a/htmls/home/templates/Public/footer.html
+++ b/htmls/home/templates/Public/footer.html
@@ -1,2 +1,3 @@
-<script src="<{$__PUBLIC__}>/bootstrap3/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="<{$__PUBLIC__}>/bootstrap3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
