--- a/htmls/home/templates/Article/detail.html
+++ b/htmls/home/templates/Article/detail.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+	<{include file="../Public/header.html"}>
+</head>
+<body>
+<{include file="../Public/nav.html"}>
 <div class="container main">
 	<div class="row">
 		<div class="col-md-9">
@@ -22,3 +29,6 @@
 uParse('#preview') ;
 $('.syntaxhighlighter').css('width', '200px');
 </script>
+<{include file="../Public/footer.html"}>
+</body>
+</html>
