--- a/htmls/home/templates/Index/index.html
+++ b/htmls/home/templates/Index/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+	<{include file="../Public/header.html"}>
+</head>
+<body>
+<{include file="../Public/nav.html"}>
 <div class="container main">
 	
 	<div class="row">
@@ -27,4 +34,6 @@
 	</div>
 
 </div>
-
+<{include file="../Public/footer.html"}>
+</body>
+</html>
