--- a/htmls/home/templates/Public/debug.html
+++ b/htmls/home/templates/Public/debug.html
@@ -1,4 +1,4 @@
-<div style="background-color: #f90; color: #fff; position:absolute; bottom:0; left:0; width: 100%" id="debug-bk">
+<div style="background-color: #f90; color: #fff; /*position:absolute; bottom:0; left:0;*/ width: 100%" id="debug-bk">
 <p><button style="margin: 5px; float:left; color: #f90; padding:0 5px;" status-data = "1" id="debug-btn">x</button><div style="clear:both"></div></p>
 <section style="border-top: 1px solid #fff; width: 100%">
 
