--- a/htmls/home/templates/Public/footer.html
+++ b/htmls/home/templates/Public/footer.html
@@ -1,3 +1,5 @@
+<{if $__DEBUG__ ==1 }>
+    <{include file="./debug.html"}>
+<{/if}>
+
 <script src="<{$__PUBLIC__}>/bootstrap3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
