--- a/htmls/home/templates/Index/index.html
+++ b/htmls/home/templates/Index/index.html
@@ -24,6 +24,9 @@
 					<p><a href="<{U_home m=article a=detail p="id=<{$article.id}>"}>" title="<{$article.title}>"><{$article.title}></a></p>
 					<{/foreach}>
                   <{/if}>
+                  
+                  
+                  <{$pageHtml}>
 			  </div>
 			</div>
 		</div>
