--- a/htmls/home/templates/Public/footer.html
+++ b/htmls/home/templates/Public/footer.html
@@ -1,3 +1,7 @@
+<footer>
+	author: <a href="mailto:lixin65535@126.com">lixin65535@126.com</a>
+</footer>
+
 <{if $__DEBUG__ ==1 }>
     <{include file="./debug.html"}>
 <{/if}>
