--- a/theme/home/style/main.css
+++ b/theme/home/style/main.css
@@ -10,3 +10,9 @@
 .pagination .on{
 	background-color : #f5f5f5 ;
 }
+
+footer{
+	padding: 20px 0 ;
+	border-top: 1px solid #e7e7e7;
+	text-align: center;
+}
