--- a/htmls/home/templates/Index/index.html
+++ b/htmls/home/templates/Index/index.html
@@ -11,7 +11,7 @@
 		<div class="col-md-9">
 			<div class="panel panel-default">
 			  <div class="panel-heading">
-			    <h3 class="panel-title">Panel title</h3>
+			    <h3 class="panel-title">文章列表</h3>
 			  </div>
 			  <div class="panel-body">
                   
