--- a/htmls/home/templates/Public/footer.html
+++ b/htmls/home/templates/Public/footer.html
@@ -1,9 +1,7 @@
-<footer>
-	author: <a href="mailto:lixin65535@126.com">lixin65535@126.com</a>
-</footer>
-
+<div id="footer">
+    <p>author: <a href="mailto:lixin65535@126.com">lixin65535@126.com</a></p>
+</div>
+<!-- end #footer -->
 <{if $__DEBUG__ ==1 }>
     <{include file="./debug.html"}>
 <{/if}>
-
-<script src="<{$__PUBLIC__}>/bootstrap3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
