--- a/htmls/home/templates/Public/header.html
+++ b/htmls/home/templates/Public/header.html
@@ -1,19 +1,30 @@
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title><{$page_title}></title>
-<meta name="keywords" content="<{$page_keywords}>"/>
-<meta name="description" content="<{$page_keywords}>" />
-<!-- 
-<link href="<{$__PUBLIC__}>/bootstrap3/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="<{$__THEME__}>/style/main.css" type="text/css" rel="stylesheet">
-	-->
-	
-<{foreach from=$css_array item=css}>
-<link href="<{$css}>" type="text/css" rel="stylesheet">
-<{/foreach}>
-
-<{foreach from=$js_array item=js}>
-<script src="<{$js}>" language="javascript" type="text/javascript" ></script>
-<{/foreach}>
+<div id="logo">
+    <h1>PhpXin </h1>
+    <p><em> design by phpxin </em></p>
+</div>
+<hr />
+<!-- end #logo -->
+<div id="header">
+    <div id="menu">
+        <ul>
+            <li><a href="/" class="first">Home</a></li>
+            <!--
+            <li class="current_page_item"><a href="#">Blog</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li> -->
+        </ul>
+    </div>
+    <!-- end #menu -->
+    <!--<div id="search">
+        <form method="get" action="">
+            <fieldset>
+                <input type="text" name="s" id="search-text" size="15" />
+                <input type="submit" id="search-submit" value="GO" />
+            </fieldset>
+        </form>
+    </div>-->
+    <!-- end #search -->
+</div>
+<!-- end #header -->
+<!-- end #header-wrapper -->
 
