--- a/htmls/home/templates/Public/footer.html
+++ b/htmls/home/templates/Public/footer.html
@@ -5,3 +5,6 @@
 <{if $__DEBUG__ ==1 }>
     <{include file="./debug.html"}>
 <{/if}>
+<{foreach from=$js_array item=js}>
+<script src="<{$js}>" type="text/javascript" language="javascript"></script>
+<{/foreach}>
