--- a/htmls/home/templates/Public/header.html
+++ b/htmls/home/templates/Public/header.html
@@ -1,30 +1,8 @@
-<div id="logo">
-    <h1>PhpXin </h1>
-    <p><em> design by phpxin </em></p>
-</div>
-<hr />
-<!-- end #logo -->
-<div id="header">
-    <div id="menu">
-        <ul>
-            <li><a href="/" class="first">Home</a></li>
-            <!--
-            <li class="current_page_item"><a href="#">Blog</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li> -->
-        </ul>
-    </div>
-    <!-- end #menu -->
-    <!--<div id="search">
-        <form method="get" action="">
-            <fieldset>
-                <input type="text" name="s" id="search-text" size="15" />
-                <input type="submit" id="search-submit" value="GO" />
-            </fieldset>
-        </form>
-    </div>-->
-    <!-- end #search -->
-</div>
-<!-- end #header -->
-<!-- end #header-wrapper -->
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title><{$page_title}></title>
+<meta name="keywords" content="<{$page_keywords}>" />
+<meta name="description" content="<{$page_keywords}>" />
+<{foreach from=$css_array item=css}>
+<link href="<{$css}>" type="text/css" rel="stylesheet" />
+<{/foreach}>
 
