--- a/htmls/home/templates/Public/nav.html
+++ b/htmls/home/templates/Public/nav.html
@@ -1,38 +1,29 @@
-<nav class="navbar navbar-default">
-  <div class="container container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="<{U_home m=index a=index}>">Dream</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="<{if $currentType eq 0}>active<{/if}>"><a href="<{U_home m=index a=index}>">首页 </a></li>
-        <{foreach from=$typeList item=type}>
-        <li class="<{if $currentType eq $type.id}>active<{/if}>"><a href="<{U_home m=index a=index p="type=<{$type.id}>"}>"><{$type.name}></a></li>
-        <{/foreach}>
-      </ul>
-      
-      <ul class="nav navbar-nav navbar-right">
-      	<!-- 
-        <li><a href="#">Link</a></li>
-        -->
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">小游戏<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/games/xxl">连连看</a></li>
-            <li><a href="<{U_home m=Games a=getGame p='act=planebattle'}>">打飞机</a></li>
-            <li><a href="<{U_home m=Games a=getGame p='act=catch'}>">抓</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+<div id="logo">
+  <h1>PhpXin </h1>
+  <p><em> design by phpxin </em></p>
+</div>
+<hr />
+<!-- end #logo -->
+<div id="header">
+  <div id="menu">
+    <ul>
+      <li><a href="/" class="first">Home</a></li>
+      <!--
+      <li class="current_page_item"><a href="#">Blog</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li> -->
+    </ul>
+  </div>
+  <!-- end #menu -->
+  <!--<div id="search">
+      <form method="get" action="">
+          <fieldset>
+              <input type="text" name="s" id="search-text" size="15" />
+              <input type="submit" id="search-submit" value="GO" />
+          </fieldset>
+      </form>
+  </div>-->
+  <!-- end #search -->
+</div>
+<!-- end #header -->
+<!-- end #header-wrapper -->
