--- a/htmls/home/templates/Public/header.html
+++ b/htmls/home/templates/Public/header.html
@@ -5,4 +5,7 @@
 <{foreach from=$css_array item=css}>
 <link href="<{$css}>" type="text/css" rel="stylesheet" />
 <{/foreach}>
+<{foreach from=$js_array item=js}>
+<script src="<{$js}>" type="text/javascript" language="javascript"></script>
+<{/foreach}>
 
