--- a/htmls/home/templates/Public/nav.html
+++ b/htmls/home/templates/Public/nav.html
@@ -7,7 +7,16 @@
 <div id="header">
   <div id="menu">
     <ul>
-      <li><a href="/" class="first">Home</a></li>
+      <li><a href="/" class="first menu-item">Home</a></li>
+      <li class="nav-dropdown">
+          <a href="javascript:void(0);" id="menu-types-trigger" class="menu-item" >types</a>
+          <div class="nav-dropdown-box" id="menu-types">
+              <{foreach from=$typeList item=type}>
+              <div class="nav-dropdown-item"><a href="<{U_home m=index a=getList p="type=<{$type.id}>"}>" title="<{$type.name}>" class="<{if $currentType eq $type.id}>on<{/if}>" ><{$type.name}></a></div>
+              <{/foreach}>
+              <div class="clean"></div>
+          </div>
+      </li>
       <!--
       <li class="current_page_item"><a href="#">Blog</a></li>
       <li><a href="#">About</a></li>
@@ -24,6 +33,27 @@
       </form>
   </div>-->
   <!-- end #search -->
+
+    <script type="text/javascript">
+        $(function(){
+            $('#menu-types').hide();
+        });
+
+        var menu_type_isshow = false;
+
+        $('#menu-types-trigger').click(function(){
+            if (menu_type_isshow){
+                $('#menu-types').hide();
+                menu_type_isshow = false;
+            }else{
+                $('#menu-types').show();
+                menu_type_isshow = true;
+            }
+
+        }) ;
+
+
+    </script>
 </div>
 <!-- end #header -->
 <!-- end #header-wrapper -->
