--- a/htmls/admin/templates/Product/list.html
+++ b/htmls/admin/templates/Product/list.html
@@ -60,6 +60,7 @@
                                 </table>
                             </div>
                             <!-- /.table-responsive -->
+                            <{$pagehtml}>
                         </div>
                         <!-- /.panel-body -->
                     </div>
