--- a/theme/home/style/editor_t.css
+++ b/theme/home/style/editor_t.css
@@ -1,1 +1,5 @@
-#preview *{font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;}
+#preview *{font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace; }
+#preview p{font-size: 14px;}
+#preview h1{font-size: 22px; font-weight: bold}
+#preview h2{font-size: 20px; font-weight: bold}
+#preview h3{font-size: 18px; font-weight: bold}
