--- a/htmls/home/templates/Article/detail.h5.html
+++ b/htmls/home/templates/Article/detail.h5.html
@@ -9,10 +9,12 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1" />
 
     <link href="<{$__PUBLIC__}>/editor/third-party/SyntaxHighlighter/shCoreDefault.css" type="text/css" rel="stylesheet" >
+    <link href="<{$__THEME__}>/style/editor_t.css" type="text/css" rel="stylesheet" >
     <script src="<{$__PUBLIC__}>/editor/ueditor.parse.js" type="text/javascript" language="javascript"></script>
     <script src="<{$__PUBLIC__}>/editor/third-party/SyntaxHighlighter/shCore.js" type="text/javascript" language="javascript"></script>
 </head>
 <body>
+<div style="width: 100%">
     <h3><{$detail.title}></h3><p style="margin-bottom: 20px;"><i><{$detail.addtime|date_format:"%Y-%m-%d"}></i></p>
     <hr />
 
@@ -21,9 +23,13 @@
         <div id="preview"><{$content}></div>
 
     </div>
-    <script>
-        uParse('#preview') ;
-        $('.syntaxhighlighter').css('width', '200px');
-    </script>
+
+
+</div>
+
+<script>
+    uParse('#preview') ;
+    $('.syntaxhighlighter').css('width', '200px');
+</script>
 </body>
 </html>
