--- a/theme/home/style/editor_t.css
+++ b/theme/home/style/editor_t.css
@@ -1,4 +1,4 @@
-#preview *{font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace; }
+#preview *{font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace; font-size: 14px;}
 #preview p{font-size: 14px;}
 #preview h1{font-size: 22px; font-weight: bold}
 #preview h2{font-size: 20px; font-weight: bold}
