--- a/htmls/home/templates/Article/detail.h5.html
+++ b/htmls/home/templates/Article/detail.h5.html
@@ -28,8 +28,8 @@
 </div>
 
 <script>
-    uParse('#preview') ;
-    $('.syntaxhighlighter').css('width', '200px');
+    //uParse('#preview') ;
+    //$('.syntaxhighlighter').css('width', '200px');
 </script>
 </body>
 </html>
