--- a/htmls/home/templates/Article/detail.html
+++ b/htmls/home/templates/Article/detail.html
@@ -9,7 +9,9 @@
 
     <div class="article_content">
         <div id="preview"><{$content}></div>
+
     </div>
+    <div>阅读:<{$readCount}></div>
     <!-- end #sidebar -->
     <div style="clear: both;">&nbsp;</div>
 </div>
