--- a/htmls/home/templates/Public/nav.html
+++ b/htmls/home/templates/Public/nav.html
@@ -8,39 +8,27 @@
     <div id="menu">
         <ul>
             <li><a href="/" class="first menu-item">Home</a></li>
-            <li class="nav-dropdown">
-              <a href="javascript:void(0);" id="menu-types-trigger" class="menu-item" >types</a>
-              <div class="nav-dropdown-box" id="menu-types">
-                  <{foreach from=$typeList item=type}>
-                  <div class="nav-dropdown-item"><a href="<{U_home m=index a=getList p="type=<{$type.id}>"}>" title="<{$type.name}>" class="<{if $currentType eq $type.id}>on<{/if}>" ><{$type.name}></a></div>
-                  <{/foreach}>
-                  <div class="clean"></div>
-              </div>
+            <li class="nav-dropdown" id="menu-types-trigger">
+                <a href="javascript:void(0);" class="menu-item" >types</a>
+                <div class="nav-dropdown-box" id="menu-types">
+                    <{foreach from=$typeList item=type}>
+                    <a class="nav-dropdown-item" href="<{U_home m=index a=getList p="type=<{$type.id}>"}>" title="<{$type.name}>" class="<{if $currentType eq $type.id}>on<{/if}>" ><{$type.name}></a>
+                    <{/foreach}>
+                    <div class="clean"></div>
+                </div>
+                <div class="clean"></div>
             </li>
-            <li class="nav-dropdown">
-                <a href="javascript:void(0);" id="menu-games-trigger" class="menu-item" >games</a>
+            <li class="nav-dropdown" id="menu-games-trigger">
+                <a href="javascript:void(0);" class="menu-item" >games</a>
                 <div class="nav-dropdown-box" id="menu-games">
-                    <div class="nav-dropdown-item"><a href="<{U_home m=games a=getGame p="act=planebattle"}>" title="planebattle" >飞机大战</a></div>
-                    <div class="nav-dropdown-item"><a href="/games/xxl" title="xxl" >连连看</a></div>
+                    <a class="nav-dropdown-item" href="<{U_home m=games a=getGame p="act=planebattle"}>" title="planebattle" >飞机大战</a>
+                    <a class="nav-dropdown-item" href="/games/xxl" title="xxl" >连连看</a>
                     <div class="clean"></div>
                 </div>
             </li>
-          <!--
-          <li class="current_page_item"><a href="#">Blog</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li> -->
+            <div class="clean"></div>
         </ul>
     </div>
-  <!-- end #menu -->
-  <!--<div id="search">
-      <form method="get" action="">
-          <fieldset>
-              <input type="text" name="s" id="search-text" size="15" />
-              <input type="submit" id="search-submit" value="GO" />
-          </fieldset>
-      </form>
-  </div>-->
-  <!-- end #search -->
 
     <script type="text/javascript">
 
@@ -58,17 +46,13 @@
 
             dropBox[name] = false;
 
-            $('#'+name+'-trigger').click(function(){
-                if (dropBox[name]){
-                    $('#'+name).hide();
-                    dropBox[name] = false;
-                }else{
-                    $('#'+name).show();
-                    dropBox[name] = true;
-                }
+            $('#'+name+'-trigger').hover(function(){
+                $('#'+name).show();
+
+            }, function(){
+                $('#'+name).hide();
 
             }) ;
-
         }
 
 
