--- a/htmls/home/templates/Article/detail.html
+++ b/htmls/home/templates/Article/detail.html
@@ -16,12 +16,16 @@
     <div style="clear: both;">&nbsp;</div>
 </div>
 <!-- baidu share -->
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"0","bdPos":"right","bdTop":"100"},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='//bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script><!-- baidu share -->
+<script type="text/javascript">window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"0","bdPos":"right","bdTop":"100"},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='//bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script><!-- baidu share -->
 <!-- end #page -->
 <{include file="../Public/footer.html"}>
-<script>
-    uParse('#preview') ;
-    $('.syntaxhighlighter').css('width', '200px');
+<script type="text/javascript">
+
+    UE.sh_config.sh_theme = "shCoreDefault.css";    //语法高亮主题
+    uParse('#preview', {
+        rootPath: '/theme/public/editor/'
+    }) ;
+
 </script>
 <{include file="../Public/analyze.html"}>
 </body>
