--- a/theme/home/style/style.css
+++ b/theme/home/style/style.css
@@ -6,11 +6,12 @@ Released for free under a Creative Commons Attribution 2.5 License
 */
 
 body {
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	background: #E7E3CE url(../images/img01.jpg) repeat-x left top;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
+	/*font-family: Arial, Helvetica, sans-serif;*/
+	/*font-size: 12px;*/
+	font: 12px 微软雅黑, PMingLiU, Verdana, Arial, Helvetica, sans-serif ;
 	color: #464646;
 }
 
@@ -95,7 +96,7 @@ hr { display: none; }
 	width: 1000px;
 	height: 50px;
 	margin: 0 auto;
-	padding: 0px;
+	padding: 0;
 	background: url(../images/img04.jpg) no-repeat left top;
 }
 
@@ -105,12 +106,12 @@ hr { display: none; }
 	width: 980px;
 	height: 200px;
 	margin: 0 auto;
-	padding: 0px 0px 0px 20px;
+	padding-left:20px;
 	background: url(../images/img02.jpg) no-repeat left top;
 }
 
 #logo h1, #logo p {
-	margin: 0px;
+	margin: 0;
 	line-height: normal;
 	text-transform: lowercase;
 	font-weight: normal;
@@ -171,7 +172,6 @@ hr { display: none; }
 	text-decoration: none;
 	text-align: center;
 	text-transform: lowercase;
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	font-weight: normal;
 	color: #573D26;
@@ -218,13 +218,13 @@ hr { display: none; }
 #search {
 	float: right;
 	width: 240px;
-	padding: 10px 30px 0px 0px;
+	padding: 10px 30px 0 0;
 }
 
 #search form {
 	float: right;
 	margin: 0;
-	padding: 4px 0px 0 0;
+	padding: 4px 0 0 0;
 }
 
 #search fieldset {
@@ -242,7 +242,6 @@ hr { display: none; }
 	width: 150px;
 	height: 18px;
 	padding: 3px 0 0 5px;
-	border: none;
 	background: #FFFFFF;
 	border: 1px solid #B9B6A5;
 	color: #FFFFFF;
@@ -251,7 +250,7 @@ hr { display: none; }
 #search-submit {
 	height: 21px;
 	margin-left: 10px;
-	padding: 0px 5px;
+	padding: 0 5px;
 	background: #573D26;
 	border: none;
 	color: #FFFFFF;
@@ -262,7 +261,7 @@ hr { display: none; }
 #page {
 	width: 960px;
 	margin: 0 auto;
-	padding: 20px 20px 0px 20px;
+	padding: 20px 20px 0 20px;
 }
 
 #banner {
@@ -302,8 +301,7 @@ hr { display: none; }
 	height: 32px;
 	margin-top: -10px;
 	margin-left: 2px;
-	padding: 4px 30px 2px 0px;
-	font-family: Arial, Helvetica, sans-serif;
+	padding: 4px 30px 2px 0;
 	font-weight: normal;
 	font-size: 10px;
 	color: #85B1C2;
@@ -318,7 +316,7 @@ hr { display: none; }
 
 .post .entry {
 	border-top: 1px solid #E0E0E0;
-	padding: 10px 0px;
+	padding: 10px 0;
 }
 
 .post .links {
@@ -330,12 +328,10 @@ hr { display: none; }
 	display: block;
 	width: 120px;
 	height: 18px;
-	margin: 0px 0px 4px 0px; 
-	padding: 3px 0px 0px 40px;
+	margin: 0 0 4px 0; 
+	padding: 3px 0 0 40px;
 	text-decoration: none;
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 11px;
-	text-decoration: none;
 	font-weight: bold;
 	color: #FFFFFF;
 }
@@ -344,12 +340,12 @@ hr { display: none; }
 	display: block;
 	width: 120px;
 	height: 18px;
-	margin: 0px; 
-	padding: 3px 0px 0px 40px;
+	margin: 0; 
+	padding: 3px 0 0 40px;
 	background: #90BF35;
 	border: 1px solid #5F817E;
 	text-decoration: none;
-	font-family: Arial, Helvetica, sans-serif;
+
 	font-size: 11px;
 	font-weight: bold;
 	color: #FFFFFF;
@@ -357,7 +353,7 @@ hr { display: none; }
 
 .post div.post-list-item {
 
-    padding: 10px 0px;
+    padding: 10px 0;
     border: none;
     border-bottom: 1px dashed #B9B6A5;
 }
@@ -380,9 +376,14 @@ hr { display: none; }
 	padding: 20px 20px;
 	border: 1px dashed #B9B6A5;
 	background-color: #f5f5f5;
+	/*overflow-x: scroll;*/
 }
 
-/* Page */
+/*.article_content table{*/
+	/*display: block;*/
+/*}*/
+
+	/* Page */
 
 #limit-page ul{
     list-style: none;
@@ -408,7 +409,6 @@ hr { display: none; }
 #sidebar {
 	float: right;
 	width: 300px;
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 }
 
@@ -422,25 +422,25 @@ hr { display: none; }
 
 #sidebar li {
 	margin-bottom: 20px;
-	padding: 0px 0px 40px 0px;
+	padding: 0 0 40px 0;
 	background: url(../images/img06.jpg) repeat-y left top;
 }
 
 #sidebar li ul {
-	margin: 0px 0px;
+	margin: 0 0;
 	border: none;
 	background: none;
 }
 
 #sidebar li li {
-	margin: 0px 40px;
-	padding: 10px 0px;
+	margin: 0 40px;
+	padding: 10px 0;
 	border: none;
 	background: url(../images/img07.jpg) repeat-x left bottom;
 }
 
 #sidebar li li a {
-	padding: 0px 0px 0px 0px;
+	padding: 0 0 0 0;
 	font-weight: normal;
 	border: none;
 }
@@ -451,13 +451,13 @@ hr { display: none; }
 
 #sidebar p {
 	margin: 0;
-	padding: 0px 40px;
+	padding: 0 40px;
 }
 
 #sidebar h2 {
 	height: 20px;
-	margin: 0 0 20px 0px;
-	padding: 30px 0px 0px 40px;
+	margin: 0 0 20px 0;
+	padding: 30px 0 0 40px;
 	background: url(../images/img05.jpg) no-repeat left top;
 	text-transform: capitalize;
 	font-size: 18px;
@@ -549,7 +549,7 @@ hr { display: none; }
 
 #footer p {
 	margin: 0;
-	padding: 20px 0px 0px 0px;
+	padding: 20px 0 0 0;
 	text-align: center;
 	line-height: normal;
 	text-transform: uppercase;
