--- a/theme/home/style/editor_t.css
+++ b/theme/home/style/editor_t.css
@@ -7,8 +7,7 @@
 #preview h2{font-size: 20px; font-weight: bold}
 #preview h3{font-size: 18px; font-weight: bold}
 #preview h3{font-size: 18px; font-weight: bold}
-/*#preview .syntaxhighlighter *{*/
-    /*font-family: "Courier New", Courier, Consolas, "Liberation Mono", Menlo, monospace;*/
-    /*font-size: 14px;*/
-    /*line-height: 24px;*/
-/*}*/
+#preview .syntaxhighlighter *{
+    font-family: "Courier New", Courier, Consolas, "Liberation Mono", Menlo, monospace;
+    font-size: 14px;
+}
