--- a/htmls/home/templates/Public/footer.html
+++ b/htmls/home/templates/Public/footer.html
@@ -1,5 +1,6 @@
 <div id="footer">
-    <p>author: <a href="mailto:lixin65535@126.com">lixin65535@126.com</a></p>
+	<p class="links">友情链接：<a href="http://www.tebie6.com" target="_blank">峡谷最浪安琪拉的博客</a></p>
+    <p class="author">author: <a href="mailto:lixin65535@126.com">lixin65535@126.com</a> 京ICP备16015209号-1</p>
 </div>
 <!-- end #footer -->
 <{if $__DEBUG__ ==1 }>
