--- a/theme/home/style/style.css
+++ b/theme/home/style/style.css
@@ -550,11 +550,20 @@ hr { display: none; }
 #footer p {
 	margin: 0;
 	padding: 20px 0 0 0;
-	text-align: center;
+	/*text-align: center;*/
 	line-height: normal;
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
 	font-size: 10px;
 	color: #573D26;
+}
+
+#footer .links {
+	width:960px;
+	margin:0 auto;
+}
+
+#footer .author {
+	text-align: center;
 }
 
 #footer a {
